--- a/example3/templates/chatbot_luo.html
+++ b/example3/templates/chatbot_luo.html
@@ -187,6 +187,11 @@
                 }
             });
 
+            socket.on('disconnect',function(msg){
+
+                content.scrollTop(content.get(0).scrollHeight);
+            });
+
 
 
 
@@ -202,6 +207,14 @@
                 );
                 }
                 content.scrollTop(content.get(0).scrollHeight);
+            });
+
+            socket.on('disconnect',function(){
+                console.log('123',socket.connected)
+                $('#content').append(
+                    `<li><div><img src="static/avatar2.jpeg" class="img-left"><div class="line text-left">disconnect1,please reconnect<div class="arrow-left"></div></div></li>`
+                    );
+                    content.scrollTop(content.get(0).scrollHeight);
             });
 
 
@@ -227,7 +240,7 @@
                         );
                     input.val('');
                     $('#content').append(
-                    `<li><div><img src="static/avatar2.jpeg" class="img-left"><div class="line text-left">disconnect,please reconnect<div class="arrow-left"></div></div></li>`
+                    `<li><div><img src="static/avatar2.jpeg" class="img-left"><div class="line text-left">disconnect2,please reconnect<div class="arrow-left"></div></div></li>`
                     );
                     content.scrollTop(content.get(0).scrollHeight);
                 }
@@ -252,6 +265,11 @@
 </head>
 <body>
 <div id="container">
+
+  <div style="border:1px;text-align:right">
+    <button id="btn2" type="button">New Conversation</button>
+  </div>
+
   <div class="header">
     <span style="float: left;">Chat</span>
     <span style="float: right;" id="time"></span>
